--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,52 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.55
+head: 1.64
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 55;	selected revisions: 55
+total revisions: 64;	selected revisions: 64
 description:
+----------------------------
+revision 1.64
+date: 2003/12/23 19:45:46;  author: gilles;  state: Exp;  lines: +5 -8
+Removed auth capability debug
+----------------------------
+revision 1.63
+date: 2003/12/23 19:44:47;  author: gilles;  state: Exp;  lines: +7 -6
+One line only for --version
+----------------------------
+revision 1.62
+date: 2003/12/23 19:28:12;  author: gilles;  state: Exp;  lines: +6 -5
+Added ref pop2imap
+----------------------------
+revision 1.61
+date: 2003/12/23 19:23:07;  author: gilles;  state: Exp;  lines: +11 -6
+Updated Success stories
+----------------------------
+revision 1.60
+date: 2003/12/23 18:21:44;  author: gilles;  state: Exp;  lines: +8 -8
+Try separator()
+----------------------------
+revision 1.59
+date: 2003/12/23 18:19:24;  author: gilles;  state: Exp;  lines: +34 -16
+Added MD5 auth
+----------------------------
+revision 1.58
+date: 2003/12/23 17:26:45;  author: gilles;  state: Exp;  lines: +44 -27
+Preparation to MD5 auth
+----------------------------
+revision 1.57
+date: 2003/12/23 03:04:16;  author: gilles;  state: Exp;  lines: +14 -6
+Prepared code for separator() use.
+Added --justconnect option.
+----------------------------
+revision 1.56
+date: 2003/12/13 19:38:33;  author: gilles;  state: Exp;  lines: +7 -7
+Removed tha bad help message about nested folders and
+--folder option
 ----------------------------
 revision 1.55
 date: 2003/12/13 18:16:56;  author: gilles;  state: Exp;  lines: +30 -15
