--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 NAME
     imapsync - synchronize mailboxes between two imap servers.
 
-    $Revision: 1.55 $
+    $Revision: 1.64 $
 
 INSTALL
      Get imapsync at
@@ -130,7 +130,7 @@ BUGS
 IMAP SERVERS
     Success stories reported :
 
-     - Courier IMAP 1.5.1, 2.1.1
+     - Courier IMAP 1.5.1, 2.2.0, 2.1.1
      - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.2.1, Cyrus 2.2.2-BETA
      - Netscape Mail Server 3.6 (Wintel)
      - CommunicatePro server (Redhat 8.0)
@@ -138,6 +138,8 @@ IMAP SERVERS
      - iPlanet Messaging server 4.15
      - dovecot ?.?? 
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
+     - BincImap 1.2.3
+     - DBMail 1.2.1
 
     Please report to the author any success or bad story with imapsync and
     don't forget to mention the IMAP server software names and version on
@@ -147,6 +149,8 @@ IMAP SERVERS
 
      From software :* OK louloutte Cyrus IMAP4 v1.5.19 server ready
      To   software :* OK Courier-IMAP ready
+
+    You can use option --justconnect to get those lines.
 
     Rate imapsync : http://freshmeat.net/projects/imapsync/
 
@@ -176,8 +180,9 @@ SIMILAR SOFTWARES
       mailsync    : http://mailsync.sourceforge.net/
       imapxfer    : http://www.washington.edu/imap/
                     part of the imap-utils from UW.
+      pop2imap    : http://www.linux-france.org/prj/pop2imap/
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.55 2003/12/13 18:16:56 gilles Exp $
+    $Id: imapsync,v 1.64 2003/12/23 19:45:46 gilles Exp $
 
