--- a/TODO
+++ b/TODO
@@ -1,16 +1,24 @@
 TODO file for imapsync
 ----------------------
 
-Add --prefix1 option. Don't know what is the need exactly.
 
-Add SASL support MD5 : DIGEST-MD5 and CRAM-MD5
-see authenticate in IMAPClient.pm
-Test the new Mail::IMAPClient (2.1.4 -> 2.2.8 or sup)
+Add a --recurse option.
+
+Add --prefix1 option. Don't know what is the need exactly.
 
 Pb if "to separator" is in "from folder" name.
 Have to choose a caracter != to separator and
 not in from folders. The solution can be to
 just exchange the two caracters.
+
+DONE. Look at the separator() function in Mail::IMAPClient
+
+DONE. Add SASL support MD5 : DIGEST-MD5 and CRAM-MD5
+see authenticate in IMAPClient.pm
+Test the new Mail::IMAPClient (2.1.4 -> 2.2.6 or sup)
+userdbpw -hmac-md5 | userdb userdb set hmac-md5pw
+http://www.inter7.com/courierimap/INSTALL.html
+
 
 DONE. Add a --subscribe option to subscribe folders on the
       destination server.
