--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
     imap servers.
 
-    $Revision: 1.68 $
+    $Revision: 1.71 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -33,10 +33,13 @@ SYNOPSIS
                [--host2 server2]  [--port2 <num>]
                [--user2 <string>] [--passfile2 <string>] 
                [--folder <string> --folder <string> ...]
+               [--include <regex>] [--exclude <regex>]
                [--prefix2 <string>]
                [--sep1 <char>]
                [--sep2 <char>]
-               [--syncinternaldate]
+               [--syncinternaldates]
+               [--maxsize <int>]
+               [--maxage <int>]
                [--delete] [--expunge]
                [--subscribed] [--subscribe]
                [--dry]
@@ -162,7 +165,7 @@ IMAP SERVERS
 
 HUGE MIGRATION
     Have a special attention on options --subscribed --subscribe --delete
-    --expunge
+    --expunge --maxage --maxsize
 
     If you have many mailboxes to migrate think about a little shell
     program. Write a file called file.csv (for example) containing users and
@@ -190,5 +193,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.68 2004/01/28 03:49:29 gilles Exp $
+    $Id: imapsync,v 1.71 2004/01/29 04:28:36 gilles Exp $
 
