--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,26 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.68
+head: 1.71
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 68;	selected revisions: 68
+total revisions: 71;	selected revisions: 71
 description:
+----------------------------
+revision 1.71
+date: 2004/01/29 04:28:36;  author: gilles;  state: Exp;  lines: +23 -7
+Added statistics about bytes transfered, skipped
+----------------------------
+revision 1.70
+date: 2004/01/29 03:32:01;  author: gilles;  state: Exp;  lines: +9 -5
+Updated "Huge Migration".
+----------------------------
+revision 1.69
+date: 2004/01/29 02:27:41;  author: gilles;  state: Exp;  lines: +45 -16
+Patch from Kaspar Brand as is.
 ----------------------------
 revision 1.68
 date: 2004/01/28 03:49:29;  author: gilles;  state: Exp;  lines: +17 -13
