--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.64
+head: 1.65
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 64;	selected revisions: 64
+total revisions: 65;	selected revisions: 65
 description:
+----------------------------
+revision 1.65
+date: 2003/12/24 03:04:34;  author: gilles;  state: Exp;  lines: +20 -7
+Wrote separator_invert()
+Use separator_invert() to transform separators
 ----------------------------
 revision 1.64
 date: 2003/12/23 19:45:46;  author: gilles;  state: Exp;  lines: +5 -8
