--- a/TODO
+++ b/TODO
@@ -6,10 +6,10 @@ Add a --recurse option.
 
 Add --prefix1 option. Don't know what is the need exactly.
 
-Pb if "to separator" is in "from folder" name.
+DONE. Pb if "to separator" is in "from folder" name.
 Have to choose a caracter != to separator and
 not in from folders. The solution can be to
-just exchange the two caracters.
+just exchange the two separator caracters.
 
 DONE. Look at the separator() function in Mail::IMAPClient
 
