--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,28 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.65
+head: 1.68
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 65;	selected revisions: 65
+total revisions: 68;	selected revisions: 68
 description:
+----------------------------
+revision 1.68
+date: 2004/01/28 03:49:29;  author: gilles;  state: Exp;  lines: +17 -13
+Added "Success stories"
+Sorted "Success stories"
+Added windows note.
+----------------------------
+revision 1.67
+date: 2004/01/28 03:10:24;  author: gilles;  state: Exp;  lines: +6 -6
+Better description for google.
+----------------------------
+revision 1.66
+date: 2004/01/23 20:27:28;  author: gilles;  state: Exp;  lines: +6 -6
+Added IMAP sync words for google response.
 ----------------------------
 revision 1.65
 date: 2003/12/24 03:04:34;  author: gilles;  state: Exp;  lines: +20 -7
