--- a/TODO
+++ b/TODO
@@ -1,8 +1,10 @@
 TODO file for imapsync
 ----------------------
 
+Look at http://freshmeat.net/projects/freshmeat-submit/
+Look at comp.mail.imap
 
-Add a --recurse option.
+Add a --recurse option when --folder option is used.
 
 Add --prefix1 option. Don't know what is the need exactly.
 
