--- a/INSTALL
+++ b/INSTALL
@@ -1,7 +1,7 @@
-# $Id: INSTALL,v 1.6 2003/11/21 03:13:52 gilles Exp gilles $
+# $Id: INSTALL,v 1.7 2004/01/28 04:00:55 gilles Exp gilles $
 # 
-# INSTALL file for ftpsync 
-
+# INSTALL file for imapsync 
+# imapsync : IMAP sync or copy tool.
 
 GETTING
 -------
@@ -26,10 +26,20 @@ You need :
   http://search.cpan.org/~djkernen/
   http://search.cpan.org/~djkernen/Mail-IMAPClient-2.2.9/
   
-  In fact I use Mail-IMAPClient-2.1.4
+  In fact I use Mail-IMAPClient-2.1.4 (debian package)
   To know the version you have on your system try :
   perl -mMail::IMAPClient -e 'print $Mail::IMAPClient::VERSION, "\n"'
-  
+
+- Perl Digest::MD5 module. 
+  http://search.cpan.org/
+  http://search.cpan.org/~gaas/Digest-MD5-2.33/
+  To know the version you have on your system try :
+  perl -mDigest::MD5 -e 'print $Digest::MD5::VERSION, "\n"'
+  I use 2.20 (debian package)
+
+- (Option) Perl Digest::HMAC_MD5 module
+  Good for non plain text password over network.
+
 
 INSTALLING
 ----------
