--- a/README
+++ b/README
@@ -1,9 +1,13 @@
 NAME
-    imapsync - synchronize mailboxes between two imap servers.
+    imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
+    imap servers.
 
-    $Revision: 1.65 $
+    $Revision: 1.68 $
 
 INSTALL
+     imapsync works fine under any Unix OS.
+     imapsync works fine under Windows 2000 (at least) and ActiveState's 5.8 Perl
+
      Get imapsync at
      http://www.linux-france.org/prj/imapsync/dist/ 
 
@@ -128,18 +132,20 @@ BUGS
     Report any bugs to the author: lamiral@linux-france.org
 
 IMAP SERVERS
-    Success stories reported :
+    Success stories reported (softwares in alphabetic order) :
 
-     - Courier IMAP 1.5.1, 2.2.0, 2.1.1
-     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.2.1, Cyrus 2.2.2-BETA
-     - Netscape Mail Server 3.6 (Wintel)
-     - CommunicatePro server (Redhat 8.0)
-     - SunONE Messaging server 5.2
-     - iPlanet Messaging server 4.15
-     - dovecot ?.?? 
-     - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
      - BincImap 1.2.3
+     - CommunicatePro server (Redhat 8.0)
+     - Courier IMAP 1.5.1, 2.2.0, 2.1.1
+     - Critical Path (7.0.020)
+     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.2.1, Cyrus 2.2.2-BETA
      - DBMail 1.2.1
+     - dovecot ?.?? 
+     - iPlanet Messaging server 4.15
+     - Netscape Mail Server 3.6 (Wintel !)
+     - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
+     - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
+     - UW - QMail v2.1
 
     Please report to the author any success or bad story with imapsync and
     don't forget to mention the IMAP server software names and version on
@@ -184,5 +190,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.65 2003/12/24 03:04:34 gilles Exp $
+    $Id: imapsync,v 1.68 2004/01/28 03:49:29 gilles Exp $
 
