--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,21 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.74
+head: 1.75
 branch:
 locks: strict
-	gilles: 1.74
+	gilles: 1.75
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 74;	selected revisions: 74
+total revisions: 75;	selected revisions: 75
 description:
 ----------------------------
-revision 1.74	locked by: gilles;
+revision 1.75	locked by: gilles;
+date: 2004/02/18 14:27:40;  author: gilles;  state: Exp;  lines: +6 -6
+dovecot version
+----------------------------
+revision 1.74
 date: 2004/02/12 03:11:14;  author: gilles;  state: Exp;  lines: +11 -6
 Updated SIMILAR SOFTWARES
 ----------------------------
