--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
     imap servers.
 
-    $Revision: 1.74 $
+    $Revision: 1.75 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -143,7 +143,7 @@ IMAP SERVERS
      - Critical Path (7.0.020)
      - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.2.1, Cyrus 2.2.2-BETA
      - DBMail 1.2.1
-     - dovecot ?.?? 
+     - Dovecot 0.99.10.4
      - iPlanet Messaging server 4.15
      - Netscape Mail Server 3.6 (Wintel !)
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
@@ -201,5 +201,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.74 2004/02/12 03:11:14 gilles Exp gilles $
+    $Id: imapsync,v 1.75 2004/02/18 14:27:40 gilles Exp gilles $
 
