--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,21 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.75
+head: 1.76
 branch:
 locks: strict
-	gilles: 1.75
+	gilles: 1.76
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 75;	selected revisions: 75
+total revisions: 76;	selected revisions: 76
 description:
 ----------------------------
-revision 1.75	locked by: gilles;
+revision 1.76	locked by: gilles;
+date: 2004/02/18 21:34:46;  author: gilles;  state: Exp;  lines: +9 -6
+Added mailutil ref
+----------------------------
+revision 1.75
 date: 2004/02/18 14:27:40;  author: gilles;  state: Exp;  lines: +6 -6
 dovecot version
 ----------------------------
