--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
     imap servers.
 
-    $Revision: 1.75 $
+    $Revision: 1.76 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -141,7 +141,7 @@ IMAP SERVERS
      - CommunicatePro server (Redhat 8.0)
      - Courier IMAP 1.5.1, 2.2.0, 2.1.1
      - Critical Path (7.0.020)
-     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.2.1, Cyrus 2.2.2-BETA
+     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.2.1, Cyrus 2.2.2-BETA
      - DBMail 1.2.1
      - Dovecot 0.99.10.4
      - iPlanet Messaging server 4.15
@@ -194,6 +194,9 @@ SIMILAR SOFTWARES
       mailsync    : http://mailsync.sourceforge.net/
       imapxfer    : http://www.washington.edu/imap/
                     part of the imap-utils from UW.
+      mailutil    : replace imapxfer in 
+                    part of the imap-utils from UW.
+                    http://www.gsp.com/cgi-bin/man.cgi?topic=mailutil
       imaprepl    : http://www.bl0rg.net/software/
                     http://freshmeat.net/projects/imap-repl/
       imap_migrate: http://freshmeat.net/projects/imapmigration/
@@ -201,5 +204,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.75 2004/02/18 14:27:40 gilles Exp gilles $
+    $Id: imapsync,v 1.76 2004/02/18 21:34:46 gilles Exp gilles $
 
