--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.71
+head: 1.72
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 71;	selected revisions: 71
+total revisions: 72;	selected revisions: 72
 description:
+----------------------------
+revision 1.72
+date: 2004/02/09 15:42:33;  author: gilles;  state: Exp;  lines: +39 -9
+Better MD5 handling
 ----------------------------
 revision 1.71
 date: 2004/01/29 04:28:36;  author: gilles;  state: Exp;  lines: +23 -7
