--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,23 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.72
+head: 1.74
 branch:
 locks: strict
+	gilles: 1.74
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 72;	selected revisions: 72
+total revisions: 74;	selected revisions: 74
 description:
+----------------------------
+revision 1.74	locked by: gilles;
+date: 2004/02/12 03:11:14;  author: gilles;  state: Exp;  lines: +11 -6
+Updated SIMILAR SOFTWARES
+----------------------------
+revision 1.73
+date: 2004/02/12 00:12:46;  author: gilles;  state: Exp;  lines: +11 -5
+www.imap.org
 ----------------------------
 revision 1.72
 date: 2004/02/09 15:42:33;  author: gilles;  state: Exp;  lines: +39 -9
