--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
     imap servers.
 
-    $Revision: 1.72 $
+    $Revision: 1.74 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -161,7 +161,7 @@ IMAP SERVERS
 
     You can use option --justconnect to get those lines.
 
-    Rate imapsync : http://freshmeat.net/projects/imapsync/
+    And please rate imapsync at http://freshmeat.net/projects/imapsync/
 
 HUGE MIGRATION
     Have a special attention on options --subscribed --subscribe --delete
@@ -184,14 +184,22 @@ HUGE MIGRATION
     Welcome in shell programming !
 
 Hacking
+    Feel free to hack imapsync as the GPL Licence permits it.
+
+Links
+    Entries for imapsync: http://www.imap.org/products/showall.php
+
 SIMILAR SOFTWARES
       offlineimap : http://gopher.quux.org:70/devel/offlineimap/
       mailsync    : http://mailsync.sourceforge.net/
       imapxfer    : http://www.washington.edu/imap/
                     part of the imap-utils from UW.
+      imaprepl    : http://www.bl0rg.net/software/
+                    http://freshmeat.net/projects/imap-repl/
+      imap_migrate: http://freshmeat.net/projects/imapmigration/
       pop2imap    : http://www.linux-france.org/prj/pop2imap/
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.72 2004/02/09 15:42:33 gilles Exp $
+    $Id: imapsync,v 1.74 2004/02/12 03:11:14 gilles Exp gilles $
 
