--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,22 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.80
+head: 1.82
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 80;	selected revisions: 80
+total revisions: 82;	selected revisions: 82
 description:
+----------------------------
+revision 1.82
+date: 2004/03/12 01:40:27;  author: gilles;  state: Exp;  lines: +6 -6
+removed only
+----------------------------
+revision 1.81
+date: 2004/03/12 01:39:51;  author: gilles;  state: Exp;  lines: +11 -5
+AUTHOR pod section
 ----------------------------
 revision 1.80
 date: 2004/03/12 01:11:22;  author: gilles;  state: Exp;  lines: +6 -6
