--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
     imap servers.
 
-    $Revision: 1.80 $
+    $Revision: 1.82 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -206,5 +206,10 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.80 2004/03/12 01:11:22 gilles Exp $
+AUTHOR
+    Gilles LAMIRAL earn his living writing, installing, configuring and
+    teaching free open and gratis softwares. Don't hesitate to pay him for
+    that services.
+
+    $Id: imapsync,v 1.82 2004/03/12 01:40:27 gilles Exp $
 
