--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,21 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.76
+head: 1.77
 branch:
 locks: strict
-	gilles: 1.76
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 76;	selected revisions: 76
+total revisions: 77;	selected revisions: 77
 description:
 ----------------------------
-revision 1.76	locked by: gilles;
+revision 1.77
+date: 2004/03/11 05:33:22;  author: gilles;  state: Exp;  lines: +26 -8
+Better authmd5 stuff
+Added option --noauthmd5
+----------------------------
+revision 1.76
 date: 2004/02/18 21:34:46;  author: gilles;  state: Exp;  lines: +9 -6
 Added mailutil ref
 ----------------------------
