--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
     imap servers.
 
-    $Revision: 1.76 $
+    $Revision: 1.77 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -204,5 +204,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.76 2004/02/18 21:34:46 gilles Exp gilles $
+    $Id: imapsync,v 1.77 2004/03/11 05:33:22 gilles Exp $
 
