--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,26 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.77
+head: 1.80
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 77;	selected revisions: 77
+total revisions: 80;	selected revisions: 80
 description:
+----------------------------
+revision 1.80
+date: 2004/03/12 01:11:22;  author: gilles;  state: Exp;  lines: +6 -6
+IMail Win2003
+----------------------------
+revision 1.79
+date: 2004/03/12 01:08:12;  author: gilles;  state: Exp;  lines: +6 -5
+Added IMail 7.15
+----------------------------
+revision 1.78
+date: 2004/03/12 01:04:10;  author: gilles;  state: Exp;  lines: +19 -9
+--timeout option added. Thanks to William Hernandez (fromESS/PR Webmasters)
 ----------------------------
 revision 1.77
 date: 2004/03/11 05:33:22;  author: gilles;  state: Exp;  lines: +26 -8
