--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
     imap servers.
 
-    $Revision: 1.77 $
+    $Revision: 1.80 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -44,6 +44,7 @@ SYNOPSIS
                [--subscribed] [--subscribe]
                [--dry]
                [--debug] [--debugimap]
+               [--timeout <int>]
                [--version] [--help]
   
 DESCRIPTION
@@ -145,6 +146,7 @@ IMAP SERVERS
      - DBMail 1.2.1
      - Dovecot 0.99.10.4
      - iPlanet Messaging server 4.15
+     - IMail 7.15 (Ipswitch/Win2003)
      - Netscape Mail Server 3.6 (Wintel !)
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
@@ -204,5 +206,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.77 2004/03/11 05:33:22 gilles Exp $
+    $Id: imapsync,v 1.80 2004/03/12 01:11:22 gilles Exp $
 
