--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.82
+head: 1.83
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 82;	selected revisions: 82
+total revisions: 83;	selected revisions: 83
 description:
+----------------------------
+revision 1.83
+date: 2004/03/12 02:29:00;  author: gilles;  state: Exp;  lines: +8 -5
+Do not parse first blanks in headers (dbmail bug, thanks to
+Christophe Labouisse)
 ----------------------------
 revision 1.82
 date: 2004/03/12 01:40:27;  author: gilles;  state: Exp;  lines: +6 -6
