--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,23 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.84
+head: 1.86
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 84;	selected revisions: 84
+total revisions: 86;	selected revisions: 86
 description:
+----------------------------
+revision 1.86
+date: 2004/03/21 23:25:47;  author: gilles;  state: Exp;  lines: +19 -7
+Added --skipheader option
+Added --skipsize   option
+----------------------------
+revision 1.85
+date: 2004/03/13 20:39:10;  author: gilles;  state: Exp;  lines: +7 -6
+Updated pod IMAP SERVERS
 ----------------------------
 revision 1.84
 date: 2004/03/13 03:43:34;  author: gilles;  state: Exp;  lines: +8 -7
