--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
     imap servers.
 
-    $Revision: 1.84 $
+    $Revision: 1.86 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -40,6 +40,8 @@ SYNOPSIS
                [--syncinternaldates]
                [--maxsize <int>]
                [--maxage <int>]
+               [--skipheader <regex>]
+               [--skipsize]
                [--delete] [--expunge]
                [--subscribed] [--subscribe]
                [--dry]
@@ -145,7 +147,8 @@ IMAP SERVERS
      - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.2.1, Cyrus 2.2.2-BETA
      - DBMail 1.2.1
      - Dovecot 0.99.10.4
-     - iPlanet Messaging server 4.15
+     - Domino (Notes) 6.5
+     - iPlanet Messaging server 4.15, 5.1
      - IMail 7.15 (Ipswitch/Win2003)
      - Netscape Mail Server 3.6 (Wintel !)
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
@@ -211,5 +214,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.84 2004/03/13 03:43:34 gilles Exp $
+    $Id: imapsync,v 1.86 2004/03/21 23:25:47 gilles Exp $
 
