--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,20 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.87
+head: 1.88
 branch:
 locks: strict
-	gilles: 1.87
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 87;	selected revisions: 87
+total revisions: 88;	selected revisions: 88
 description:
 ----------------------------
-revision 1.87	locked by: gilles;
+revision 1.88
+date: 2004/03/29 23:33:00;  author: gilles;  state: Exp;  lines: +27 -11
+Added BUGS section about "Multiple copies".
+----------------------------
+revision 1.87
 date: 2004/03/24 00:08:35;  author: gilles;  state: Exp;  lines: +6 -5
 Updated Servers list.
 ----------------------------
