--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
     imap servers.
 
-    $Revision: 1.87 $
+    $Revision: 1.88 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -58,7 +58,8 @@ DESCRIPTION
 
     imapsync is the adequate tool because it reduces the amount of data
     transfered by not transfering a given message if it is already on both
-    sides. All flags are preserved, unread will stay unread, read will stay
+    sides. Same headers, same message size and the transfert is done only
+    once. All flags are preserved, unread will stay unread, read will stay
     read, deleted will stay deleted. You can stop the transfert at any time
     and restart it later, imapsync is adapted to a bad connection.
 
@@ -129,6 +130,19 @@ LICENSE
 
 BUGS
     No known serious bug.
+
+    Multiple copies: Multiple copies of the emails on the destination
+    server. Some IMAP servers (Domino for example) add some headers for each
+    message transfered. The message is transfered again and again each time
+    you run imapsync. This is bad of course. The explanation is that
+    imapsync considers the message is not the same since headers have
+    changed (one line added) and size too (the header part). You can look at
+    the headers found by imapsync by using the --debug option (and search
+    for the message on both part). The way to avoid this problem is by using
+    options --skipheader and --skipsize, like this (avoid headers beginning
+    whith X-):
+
+     imapsync ... --skipheader '^X-.*' --skipsize
 
     Flags : with some IMAP servers the flags are not very well copied the
     first time. Run imapsync twice if you want the flags set correctly.
@@ -215,5 +229,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.87 2004/03/24 00:08:35 gilles Exp gilles $
+    $Id: imapsync,v 1.88 2004/03/29 23:33:00 gilles Exp $
 
