--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.86
+head: 1.87
 branch:
 locks: strict
+	gilles: 1.87
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 86;	selected revisions: 86
+total revisions: 87;	selected revisions: 87
 description:
+----------------------------
+revision 1.87	locked by: gilles;
+date: 2004/03/24 00:08:35;  author: gilles;  state: Exp;  lines: +6 -5
+Updated Servers list.
 ----------------------------
 revision 1.86
 date: 2004/03/21 23:25:47;  author: gilles;  state: Exp;  lines: +19 -7
