--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
     imap servers.
 
-    $Revision: 1.86 $
+    $Revision: 1.87 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -150,6 +150,7 @@ IMAP SERVERS
      - Domino (Notes) 6.5
      - iPlanet Messaging server 4.15, 5.1
      - IMail 7.15 (Ipswitch/Win2003)
+     - MS Exchange Server 5.5
      - Netscape Mail Server 3.6 (Wintel !)
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
@@ -214,5 +215,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.86 2004/03/21 23:25:47 gilles Exp $
+    $Id: imapsync,v 1.87 2004/03/24 00:08:35 gilles Exp gilles $
 
