--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.83
+head: 1.84
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 83;	selected revisions: 83
+total revisions: 84;	selected revisions: 84
 description:
+----------------------------
+revision 1.84
+date: 2004/03/13 03:43:34;  author: gilles;  state: Exp;  lines: +8 -7
+Sort also same type headers (like Received)
 ----------------------------
 revision 1.83
 date: 2004/03/12 02:29:00;  author: gilles;  state: Exp;  lines: +8 -5
