--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.89
+head: 1.90
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 89;	selected revisions: 89
+total revisions: 90;	selected revisions: 90
 description:
+----------------------------
+revision 1.90
+date: 2004/04/07 18:14:05;  author: gilles;  state: Exp;  lines: +13 -6
+Added --regextrans2 option
 ----------------------------
 revision 1.89
 date: 2004/03/31 17:37:23;  author: gilles;  state: Exp;  lines: +17 -13
