--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.88
+head: 1.89
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 88;	selected revisions: 88
+total revisions: 89;	selected revisions: 89
 description:
+----------------------------
+revision 1.89
+date: 2004/03/31 17:37:23;  author: gilles;  state: Exp;  lines: +17 -13
+Changed debug output
 ----------------------------
 revision 1.88
 date: 2004/03/29 23:33:00;  author: gilles;  state: Exp;  lines: +27 -11
