--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,20 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.90
+head: 1.91
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 90;	selected revisions: 90
+total revisions: 91;	selected revisions: 91
 description:
+----------------------------
+revision 1.91
+date: 2004/04/07 18:51:24;  author: gilles;  state: Exp;  lines: +7 -6
+- Expunging the destination server is commented.
+- Expunge each message deleted message from the source server
+  if --expunge
 ----------------------------
 revision 1.90
 date: 2004/04/07 18:14:05;  author: gilles;  state: Exp;  lines: +13 -6
