--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,27 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.91
+head: 1.94
 branch:
 locks: strict
+	gilles: 1.94
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 91;	selected revisions: 91
+total revisions: 94;	selected revisions: 94
 description:
+----------------------------
+revision 1.94	locked by: gilles;
+date: 2004/06/15 03:42:56;  author: gilles;  state: Exp;  lines: +13 -6
+Added time stat
+----------------------------
+revision 1.93
+date: 2004/06/14 23:13:55;  author: gilles;  state: Exp;  lines: +18 -11
+Added stats about messages transfered and messages skipped
+----------------------------
+revision 1.92
+date: 2004/05/29 02:23:14;  author: gilles;  state: Exp;  lines: +17 -13
+Updated usage()
 ----------------------------
 revision 1.91
 date: 2004/04/07 18:51:24;  author: gilles;  state: Exp;  lines: +7 -6
