--- a/README
+++ b/README
@@ -2,14 +2,14 @@ NAME
     imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
     imap servers.
 
-    $Revision: 1.91 $
+    $Revision: 1.94 $
 
 INSTALL
      imapsync works fine under any Unix OS.
      imapsync works fine under Windows 2000 (at least) and ActiveState's 5.8 Perl
 
      Get imapsync at
-     http://www.linux-france.org/prj/imapsync/dist/ 
+     http://www.linux-france.org/prj/imapsync/dist/
 
      You'll find a compressed tarball called imapsync-x.xx.tgz
      where x.xx is the version number. Untar the tarball where
@@ -229,5 +229,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.91 2004/04/07 18:51:24 gilles Exp $
+    $Id: imapsync,v 1.94 2004/06/15 03:42:56 gilles Exp gilles $
 
