--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.95
+head: 1.96
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 95;	selected revisions: 95
+total revisions: 96;	selected revisions: 96
 description:
+----------------------------
+revision 1.96
+date: 2004/07/09 09:08:43;  author: gilles;  state: Exp;  lines: +41 -36
+Rewrote foldersizes using size() instead of new and not
+available everywhere fetch_hash().
 ----------------------------
 revision 1.95
 date: 2004/07/08 23:31:53;  author: gilles;  state: Exp;  lines: +44 -6
