--- a/TODO
+++ b/TODO
@@ -4,6 +4,10 @@ TODO file for imapsync
 Look at http://freshmeat.net/projects/freshmeat-submit/
 Look at comp.mail.imap
 
+Think about speed.
+
+Explain expunge behavior
+
 Add a --recurse option when --folder option is used.
 
 Add --prefix1 option. Don't know what is the need exactly.
