--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,20 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.94
+head: 1.95
 branch:
 locks: strict
-	gilles: 1.94
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 94;	selected revisions: 94
+total revisions: 95;	selected revisions: 95
 description:
 ----------------------------
-revision 1.94	locked by: gilles;
+revision 1.95
+date: 2004/07/08 23:31:53;  author: gilles;  state: Exp;  lines: +44 -6
+Applied --foldersizes patch as is from Reed Sandberg
+----------------------------
+revision 1.94
 date: 2004/06/15 03:42:56;  author: gilles;  state: Exp;  lines: +13 -6
 Added time stat
 ----------------------------
