--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
     imap servers.
 
-    $Revision: 1.94 $
+    $Revision: 1.95 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -44,6 +44,7 @@ SYNOPSIS
                [--skipsize]
                [--delete] [--expunge]
                [--subscribed] [--subscribe]
+               [--foldersizes]
                [--dry]
                [--debug] [--debugimap]
                [--timeout <int>]
@@ -229,5 +230,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.94 2004/06/15 03:42:56 gilles Exp gilles $
+    $Id: imapsync,v 1.95 2004/07/08 23:31:53 gilles Exp $
 
