--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,22 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.96
+head: 1.98
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 96;	selected revisions: 96
+total revisions: 98;	selected revisions: 98
 description:
+----------------------------
+revision 1.98
+date: 2004/09/29 15:49:53;  author: gilles;  state: Exp;  lines: +11 -6
+Ordered message transfer by uid. Thanks to David Alix suggestion.
+----------------------------
+revision 1.97
+date: 2004/09/29 15:00:26;  author: gilles;  state: Exp;  lines: +7 -6
+Success stories : Domino 5.0.6
 ----------------------------
 revision 1.96
 date: 2004/07/09 09:08:43;  author: gilles;  state: Exp;  lines: +41 -36
