--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
     imap servers.
 
-    $Revision: 1.96 $
+    $Revision: 1.98 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -162,13 +162,14 @@ IMAP SERVERS
      - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.2.1, Cyrus 2.2.2-BETA
      - DBMail 1.2.1
      - Dovecot 0.99.10.4
-     - Domino (Notes) 6.5
+     - Domino (Notes) 6.5, 5.0.6
      - iPlanet Messaging server 4.15, 5.1
      - IMail 7.15 (Ipswitch/Win2003)
      - MS Exchange Server 5.5
      - Netscape Mail Server 3.6 (Wintel !)
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
+       (RedHat uses UW like 2003.338rh)
      - UW - QMail v2.1
 
     Please report to the author any success or bad story with imapsync and
@@ -230,5 +231,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.96 2004/07/09 09:08:43 gilles Exp $
+    $Id: imapsync,v 1.98 2004/09/29 15:49:53 gilles Exp $
 
