--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.98
+head: 1.99
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 98;	selected revisions: 98
+total revisions: 99;	selected revisions: 99
 description:
+----------------------------
+revision 1.99
+date: 2004/10/04 18:42:40;  author: gilles;  state: Exp;  lines: +15 -8
+Added explanation about --skipheader option :
+only one regex taken into account.
 ----------------------------
 revision 1.98
 date: 2004/09/29 15:49:53;  author: gilles;  state: Exp;  lines: +11 -6
