--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 NAME
-    imapsync - IMAP sync or copy tool. Synchronize mailboxes between two
-    imap servers.
+    imapsync - IMAP synchronization, copy or migration tool. Synchronize
+    mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.98 $
+    $Revision: 1.99 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -143,7 +143,13 @@ BUGS
     options --skipheader and --skipsize, like this (avoid headers beginning
     whith X-):
 
-     imapsync ... --skipheader '^X-.*' --skipsize
+     imapsync ... --skipheader '^X-' --skipsize
+
+    You can use --skipheader only one time; if you need to skip several
+    different headers use the "or" perl regex caracter which is "|".
+    Example:
+
+     imapsync ... --skipheader '^X-|^Status|^Bcc'
 
     Flags : with some IMAP servers the flags are not very well copied the
     first time. Run imapsync twice if you want the flags set correctly.
@@ -231,5 +237,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.98 2004/09/29 15:49:53 gilles Exp $
+    $Id: imapsync,v 1.99 2004/10/04 18:42:40 gilles Exp $
 
