--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,26 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.99
+head: 1.102
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 99;	selected revisions: 99
+total revisions: 102;	selected revisions: 102
 description:
+----------------------------
+revision 1.102
+date: 2004/10/15 14:41:25;  author: gilles;  state: Exp;  lines: +36 -21
+Add use of fetch_hash() in foldersizes counting.
+----------------------------
+revision 1.101
+date: 2004/10/12 15:17:37;  author: gilles;  state: Exp;  lines: +7 -6
+Added OpenWave
+----------------------------
+revision 1.100
+date: 2004/10/08 00:57:33;  author: gilles;  state: Exp;  lines: +33 -12
+Added time infos
 ----------------------------
 revision 1.99
 date: 2004/10/04 18:42:40;  author: gilles;  state: Exp;  lines: +15 -8
