--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.99 $
+    $Revision: 1.102 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -170,9 +170,10 @@ IMAP SERVERS
      - Dovecot 0.99.10.4
      - Domino (Notes) 6.5, 5.0.6
      - iPlanet Messaging server 4.15, 5.1
-     - IMail 7.15 (Ipswitch/Win2003)
+     - IMail 7.15 (Ipswitch/Win2003), 8.12
      - MS Exchange Server 5.5
      - Netscape Mail Server 3.6 (Wintel !)
+     - OpenWave
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
        (RedHat uses UW like 2003.338rh)
@@ -237,5 +238,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.99 2004/10/04 18:42:40 gilles Exp $
+    $Id: imapsync,v 1.102 2004/10/15 14:41:25 gilles Exp $
 
