--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,27 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.103
+head: 1.106
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 103;	selected revisions: 103
+total revisions: 106;	selected revisions: 106
 description:
+----------------------------
+revision 1.106
+date: 2004/12/28 03:35:00;  author: gilles;  state: Exp;  lines: +9 -8
+If --sep2 or --sep1 is given then it has precedence over the
+separator given by imap namespace.
+----------------------------
+revision 1.105
+date: 2004/12/28 03:32:30;  author: gilles;  state: Exp;  lines: +7 -11
+Removed commented code about separator
+----------------------------
+revision 1.104
+date: 2004/11/13 02:30:24;  author: gilles;  state: Exp;  lines: +7 -6
+Added Worldmail success
 ----------------------------
 revision 1.103
 date: 2004/10/19 04:15:27;  author: gilles;  state: Exp;  lines: +9 -11
