--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     imapsync - IMAP synchronization, copy or migration tool. Synchronize
     mailboxes between two imap servers. Good at IMAP migration.
 
-    $Revision: 1.103 $
+    $Revision: 1.106 $
 
 INSTALL
      imapsync works fine under any Unix OS.
@@ -165,7 +165,7 @@ IMAP SERVERS
      - CommunicatePro server (Redhat 8.0)
      - Courier IMAP 1.5.1, 2.2.0, 2.1.1
      - Critical Path (7.0.020)
-     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.2.1, Cyrus 2.2.2-BETA
+     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.1.16, 2.2.1, Cyrus 2.2.2-BETA.
      - DBMail 1.2.1
      - Dovecot 0.99.10.4
      - Domino (Notes) 6.5, 5.0.6
@@ -174,6 +174,7 @@ IMAP SERVERS
      - MS Exchange Server 5.5
      - Netscape Mail Server 3.6 (Wintel !)
      - OpenWave
+     - Qualcomm Worldmail (NT)
      - SunONE Messaging server 5.2, 6.0 (SUN JES - Java Enterprise System)
      - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
        (RedHat uses UW like 2003.338rh)
@@ -238,5 +239,5 @@ AUTHOR
     teaching free open and gratis softwares. Don't hesitate to pay him for
     that services.
 
-    $Id: imapsync,v 1.103 2004/10/19 04:15:27 gilles Exp $
+    $Id: imapsync,v 1.106 2004/12/28 03:35:00 gilles Exp $
 
