--- a/TODO
+++ b/TODO
@@ -2,7 +2,8 @@ TODO file for imapsync
 ----------------------
 
 Look at http://freshmeat.net/projects/freshmeat-submit/
-Look at comp.mail.imap
+Look at comp.mail.imap http://groups.google.fr/groups?q=imapsync
+
 
 Think about speed.
 
