--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.102
+head: 1.103
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 102;	selected revisions: 102
+total revisions: 103;	selected revisions: 103
 description:
+----------------------------
+revision 1.103
+date: 2004/10/19 04:15:27;  author: gilles;  state: Exp;  lines: +9 -11
+Removed search("ALL") from foldersizes code
 ----------------------------
 revision 1.102
 date: 2004/10/15 14:41:25;  author: gilles;  state: Exp;  lines: +36 -21
