--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,20 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.106
+head: 1.107
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 106;	selected revisions: 106
+total revisions: 107;	selected revisions: 107
 description:
+----------------------------
+revision 1.107
+date: 2004/12/28 23:24:05;  author: gilles;  state: Exp;  lines: +30 -9
+Added option --nosyncacls
+Added synchronization of acls (by default)
+Added --justfolders
 ----------------------------
 revision 1.106
 date: 2004/12/28 03:35:00;  author: gilles;  state: Exp;  lines: +9 -8
