--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,23 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.108
+head: 1.110
 branch:
 locks: strict
+	gilles: 1.110
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 108;	selected revisions: 108
+total revisions: 110;	selected revisions: 110
 description:
+----------------------------
+revision 1.110	locked by: gilles;
+date: 2005/01/04 03:56:59;  author: gilles;  state: Exp;  lines: +92 -12
+Better performances
+----------------------------
+revision 1.109
+date: 2005/01/02 00:47:24;  author: gilles;  state: Exp;  lines: +6 -9
+Removed useless lines
 ----------------------------
 revision 1.108
 date: 2004/12/29 03:19:48;  author: gilles;  state: Exp;  lines: +8 -7
