--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.107
+head: 1.108
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 107;	selected revisions: 107
+total revisions: 108;	selected revisions: 108
 description:
+----------------------------
+revision 1.108
+date: 2004/12/29 03:19:48;  author: gilles;  state: Exp;  lines: +8 -7
+--prefix2 applied before --regextrans2
 ----------------------------
 revision 1.107
 date: 2004/12/28 23:24:05;  author: gilles;  state: Exp;  lines: +30 -9
