--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
 TODO file for imapsync
 ----------------------
 
+Add cyrus link about INBOX. namespace
+http://asg.web.cmu.edu/cyrus/download/imapd/altnamespace.html
+
 Look at http://freshmeat.net/projects/freshmeat-submit/
 Look at comp.mail.imap http://groups.google.fr/groups?q=imapsync
 
