--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.111
+head: 1.112
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 111;	selected revisions: 111
+total revisions: 112;	selected revisions: 112
 description:
+----------------------------
+revision 1.112
+date: 2005/01/04 04:49:43;  author: gilles;  state: Exp;  lines: +19 -18
+acl only if option
 ----------------------------
 revision 1.111
 date: 2005/01/04 04:05:07;  author: gilles;  state: Exp;  lines: +9 -13
